[gd_scene load_steps=8 format=3 uid="uid://4db75omc1ut8"]

[ext_resource type="Script" path="res://scenes/Player.gd" id="1_mnvuo"]
[ext_resource type="Texture2D" uid="uid://cjetmad43x75" path="res://assets/spaceman.png" id="2_owm4u"]
[ext_resource type="AudioStream" uid="uid://dhwml3mt217xf" path="res://sounds/ouch-sound-effect-30-11844.mp3" id="3_l8mih"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hc6sr"]
radius = 20.0998

[sub_resource type="CircleShape2D" id="CircleShape2D_42v5v"]
radius = 12.0416

[sub_resource type="CircleShape2D" id="CircleShape2D_u3ey3"]
radius = 87.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y162s"]
bg_color = Color(0.952941, 0.384314, 0.435294, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="Player" type="CharacterBody2D"]
collision_mask = 40
script = ExtResource("1_mnvuo")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 5)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_owm4u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_hc6sr")

[node name="Pickup" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pickup"]
shape = SubResource("CircleShape2D_42v5v")

[node name="Magnet" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Magnet"]
shape = SubResource("CircleShape2D_u3ey3")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -23.0
offset_top = 39.0
offset_right = 23.0
offset_bottom = 46.0
size_flags_vertical = 1
theme_override_styles/fill = SubResource("StyleBoxFlat_y162s")
value = 100.0
show_percentage = false

[node name="InjurySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_l8mih")

[connection signal="body_entered" from="Pickup" to="." method="_on_pickup_body_entered"]
[connection signal="body_entered" from="Magnet" to="." method="_on_magnet_body_entered"]
